@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-09T16:29:39Z",
-  "count" : 3,
+  "timestamp" : "2022-10-23T02:07:16Z",
+  "count" : 2,
   "count_minmax" : [ 2, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
