@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-10-22T08:29:11Z",
+  "timestamp" : "2022-10-23T02:07:16Z",
   "count_outdated" : 2503,
   "uniques_outdated" : 644,
   "count" : 2574,
@@ -7,7 +7,7 @@
   "clones" : [
     {
       "timestamp": "2022-10-09T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-10-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
