@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-10-09T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2022-10-22T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
